[package]
name = "gbx-header"
version = "0.1.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gbx_header"
path = "src/lib.rs"

[[bin]]
name = "gbx-info"
path = "src/bin.rs"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.120", features = ["derive"] }
xml-rs = "0.8.3"
ansi_term = "0.12.1"