[package]
name = "gbx-header"
version = "0.2.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Partial parser for GBX files"
homepage = "https://github.com/mtib/gbx-header"
documentation = "https://docs.rs/gbx-header"
repository = "https://github.com/mtib/gbx-header"
readme = "README.md"
keywords = ["parser", "files", "util", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gbx_header"
path = "src/lib.rs"

[[bin]]
name = "gbx-info"
path = "src/bin.rs"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0"
xml-rs = "0.8.3"
ansi_term = "0.12.1"
